--- a/Transfer_Learning/eccv_submission/samnet.tex
+++ b/Transfer_Learning/eccv_submission/samnet.tex
@@ -1,4 +1,4 @@
-\section{Selective Attention Memory (SAM) Network}
+\section{Selective Attention Memory Network (SAMNet)}
 
 %\begin{figure}[!b]
 %\begin{minipage}{0.43\textwidth}
@@ -19,8 +19,8 @@
 %All those modules are described below.
 %\ao{Method: Start high level, how different modules interface each other, and what the motivation is for each such a module. Then it should define standard parts such as attention over questions, and introduce all the variables that appear from nowhere. I would also like to see a more clear Figure 2 depicting the architecture. There is very little correspondence between that figure and the equations used in the paper.}
 
-SAM Network (SAMNet) is an end-to-end differentiable recurrent model equipped with an external memory~(\cref{fig:samnet}). At the conceptual level, SAMNet draws from two core ideas:
-iterative reasoning as proposed e.g. in MAC (Memory-Attention-Composition) Network~\cite{hudson2018compositional,marois2018transfer} and use of an external memory, as in Memory-Augmented Neural Networks such as NTM (Neural Turing Machine)~\cite{graves2014neural}, DNC (Differentiable Neural Computer)~\cite{graves2016hybrid} or DWM (Differentiable Working Memory)~\cite{jayram2018learning}.
+SAMNet is an end-to-end differentiable recurrent model equipped with an external memory~(\cref{fig:samnet}). At the conceptual level, SAMNet draws from two core ideas:
+iterative reasoning as proposed in MAC (Memory-Attention-Composition) Network~\cite{hudson2018compositional,marois2018transfer} and an external memory as proposed in Memory-Augmented Neural Networks such as NTM (Neural Turing Machine)~\cite{graves2014neural}, DNC (Differentiable Neural Computer)~\cite{graves2016hybrid} or DWM (Differentiable Working Memory)~\cite{jayram2018learning}.
 
 \begin{figure*}
 	\centering
@@ -29,11 +29,11 @@ iterative reasoning as proposed e.g. in MAC (Memory-Attention-Composition) Netwo
 	\label{fig:samnet}\vspace{-10pt}
 \end{figure*}
 
-A distinctive feature of the SAM Network is its frame-by-frame temporal processing approach, where a single frame can be accessed at once. This is a notable difference from~\cite{haurilet2019s}, which uses graph traversal reasoning. The recurrent nature of SAMNet does not prevent frame sequences longer than those used for training.
+A distinctive feature of SAMNet is its frame-by-frame temporal processing in a recurrent fashion; this allows for the model to be used on frame sequences longer than those used for training. This is a notable difference from~\cite{haurilet2019s}, which uses graph traversal reasoning on a fixed number of frames. 
 The memory locations store relevant objects representing contextual information about words in text and visual objects extracted from video.
 Each location of the memory stores a $d$-dimensional vector. %, where $d$ is a global parameter.
 The memory can be accessed through either content-based addressing, via dot-product attention, or location-based addressing. Using gating mechanisms, correct objects can be retrieved in order to perform multi-step spatio-temporal reasoning over text and video.
-A notable feature of this design is that the number of addresses $N$ can be changed between training and testing, to fit the data characteristics.
+A flexible aspect of this design is that the number of addresses $N$ can be changed between training and testing to fit the data characteristics.
 
 %\begin{figure}[t!]
 %	\centering
@@ -53,19 +53,20 @@ The final states in either direction of the Bi-LSTM are also concatenated and pa
 $\vec{q} \in \Reals^d$, called the \emph{question embedding}.
 The $k$-th frame of the visual input, where $k$ indexes over the frames in temporal order, is processed by an image encoder---a CNN with appropriately chosen number of layers---to produce a \emph{feature map}
 $\vec{F}_k \in \Reals^{H \times W \times d}$.
-Similar to the memory, we view $\vec{F}_k$ as a content-addressable memory with 
-$H \times W$ locations, each containing a$d$-dimensional feature vector.
-
+Similar to the memory, we view $\vec{F}_k$ as a content-addressable (read-only) memory with 
+$H \times W$ locations, each containing a $d$-dimensional feature vector.
 
 \smallskip
 
-\noindent\textbf{The SAM Cell.} The contextual words, question embedding and frame-by-frame feature map form the inputs to SAMNet's core, namely, a recurrent cell called the SAM Cell. Unrolling a new series of $T$ cells for each frame allows $T$ steps of iterative reasoning, similar to~\cite{hudson2018compositional}. Information flows between frames through the external memory.
+\noindent\textbf{SAM Cell.}
+The contextual words, question embedding and frame-by-frame feature maps form the inputs to SAM Cell, a recurrent cell that forms the core of SAMNet. Unrolling a new series of $T$ cells for each frame allows $T$ steps of iterative reasoning, similar to~\cite{hudson2018compositional}. Information flows between frames through the external memory.
 During the $t$-th reasoning step, for $t=1,2, \dots, T$, SAM Cell maintains the following information as part of its recurrent state:
 (a) $\vec{c}_t \in \Reals^d$, the control state used to drive reasoning over objects in the frame and memory; and
 (b) $\vec{so}_t  \in \Reals^d$, the summary visual object representing the relevant object for step $t$.
 Let $\vec{M}_t \in  \Reals^{N \times d}$ denote the external memory with $N$ slots at the end of step $t$.
 Let $\whead_t \in  \Reals^N$ denote an attention vector over the memory locations;
 in a trained model, $\whead_t$ points to the location of the first empty slot in memory for adding new objects.
+See the figure in supplementary material giving a detailed view of the information flow in SAM Cell.
 
 \smallskip
 
@@ -78,8 +79,7 @@ For the COG dataset, we pick 4 classes to capture the terms labeled ``last'', ``
 
 \smallskip
 
-\noindent\textbf{Retrieval Units.} The visual retrieval unit uses the information generated above to extract an attention vector $\vec{va}_t \in \Reals^{H \times W}$ over the feature vectors in $\vec{F}_k$ and a frame object 
-$\vec{vo}_t \in \Reals^d$.
+\noindent\textbf{Retrieval Units.} The visual retrieval unit uses the information generated above to extract an attention vector $\vec{va}_t \in \Reals^{H \times W}$ over the feature vectors in $\vec{F}_k$; via dot-product attention on $\vec{F}_k$, this yields  a frame object $\vec{vo}_t \in \Reals^d$.
 A similar operation on memory yields an attention vector $\rhead_t \in \Reals^N$ over the $N$ memory addresses, called the \emph{read head}, and a memory object
 $\vec{mo}_t \in \Reals^d$.
 %Note that the returned objects may be invalid, e.g., if the current reasoning step focuses on the phrase ``last red square'', $\vec{vo}_t$ is invalid even if the current frame contains a red square.
@@ -90,14 +90,14 @@ $\vec{mo}_t \in \Reals^d$.
 %\paragraph{Reasoning Unit.}
 This module is the backbone of SAMNet, which determines the gating operations to be performed on the external memory, as well as determining the correct object's location for reasoning.
 To resolve whether we have a valid object from the frame (and similarly for memory), we execute the following reasoning procedure.
-First, we compute a simple aggregate%\footnote{%
+First, we compute a simple aggregate $vs_t$ %\footnote{
 %	This is closely related to R\'{e}nyi entropy and Tsallis entropy of 
 %	order~2.}%
 of the visual attention vector $\vec{va}_t$:
 $vs_t = \sum_{i=1}^H \sum_{j=1}^W [\vec{va}_t(i,j)]^2$. It can be shown that the more localized the attention
-vector, the higher the aggregate value.
+vector $\vec{va}_t$ is, the higher is the aggregate value $vs_t$.
 We perform a similar computation on the read head $\rhead_t$ over memory locations.
-We input these two values, along with the temporal class weights $\bm{\tau}_t$, into a 3-layer feedforward classifier with hidden ELU units to extract 4 gating values (in $[0,1]$) for the current reasoning step:
+We input these two aggregate values, along with the temporal class weights $\bm{\tau}_t$, into a 3-layer feedforward classifier with hidden ELU units to extract 4 gating values (in $[0,1]$) for the current reasoning step:
 (a) $\imatch_t$, which determines whether there is a valid visual object;
 (b) $\mmatch_t$, which determines whether there is a valid memory object.
 (c) $\doreplace_t$, which determines whether the memory should be updated by replacing a previously stored object with a new one; and
@@ -110,11 +110,11 @@ We stress that the network has to learn via training how to correctly implement 
 The unit first determines the memory location where an object could be added:
 \[ \vec{w}_t = \doreplace_t \cdot \rhead_t + \doadd_t \cdot \whead_{t-1} \]
 Above, $\vec{w}_t$ denotes the pseudo-attention vector that represents the ``location'' where the memory update should happen.
-$\vec{w}_t$ sums up to at most 1 and can be zero, indicating in this case there is no need adding a new object nor replacing an existing object.
+The vector $\vec{w}_t$ sums up to at most 1 and can be zero, indicating in this case there is no need adding a new object nor replacing an existing object.
 We then update the memory accordingly:
-\[ \vec{M}_t = \vec{M}_{t-1} \odot (\vec{J} - \vec{w}_t  \otimes \mathbf{1}) + \vec{w}_t  \otimes \vec{vo}_t,\]
-where $\vec{vo}_t$ denotes the object returned by the visual retrieval unit.
-Here $\vec{J}$ denotes the all ones matrix, $\odot$ denotes the Hadamard product and $\otimes$ denotes the Kronecker product.
+\[ \vec{M}_t = \vec{M}_{t-1} \odot (\vec{J} - \vec{w}_t  \otimes \mathbf{1}) + \vec{w}_t  \otimes \vec{vo}_t\]
+Above, $\vec{J}$ denotes the all ones matrix, $\odot$ denotes the Hadamard product and $\otimes$ denotes the Kronecker product
+(Recall that $\vec{vo}_t$ denotes the frame object returned by the visual retrieval unit).
 Note that the memory is unchanged in the case where $\vec{w}_t = 0$, i.e., $\vec{M}_t = \vec{M}_{t-1}$.
 We finally update the write head so that it points to the succeeding address if an object was added to memory or otherwise stay the same.
 Let $\whead'_{t-1}$ denote the circular shift to the right of $\whead_{t-1}$ which corresponds to the soft version of the head update.
@@ -127,9 +127,9 @@ Then:
 This unit updates the (recurrent) summary object to equal the outcome of the $t$-th reasoning step.
 We first determine whether the relevant object $\vec{ro}_t$ should be obtained from memory or the frame according to:
 \[ \vec{ro}_t = \imatch_t \cdot \vec{vo}_t + \mmatch_t \cdot \vec{mo}_t \]
-Note that $\vec{ro}_t$ is allowed to be a null object (i.e. 0 vector) in case neither of the gates evaluate to true.
+Note that $\vec{ro}_t$ can be null (i.e. 0 vector) when neither gate evaluates to true.
 
 \smallskip
 
-\noindent\textbf{Output Unit.} Finally, $\vec{so}_t$ is the output of a linear layer whose inputs are $\vec{ro}_t$ and the previous summary object $\vec{so}_{t-1}$.
-This serves to retain additional information in $\vec{so}_{t-1}$, e.g., if it held the partial result of a complex query with Boolean connectives.
+\noindent\textbf{Output Unit.} Finally, $\vec{so}_t$ is the output of a linear layer whose inputs are $\vec{ro}_t$ and previous summary object $\vec{so}_{t-1}$.
+This serves to retain additional information in $\vec{so}_{t-1}$, e.g., the partial result of a complex query with Boolean connectives.
