transfer learning changes

--- a/Transfer_Learning/eccv_submission/eccv_paper_main.tex
+++ b/Transfer_Learning/eccv_submission/eccv_paper_main.tex
@@ -42,6 +42,9 @@
 \crefname{appendix}{Appendix}{Appendices}
 \crefname{definition}{Definition}{Definitions}
 
+%\usepackage{enumitem}
+%\setlist{leftmargin=*} 
+
 %% User's macros %%
 \newcommand{\Reals}{\mathbb{R}}
 \newcommand{\cD}{\mathcal{D}}
@@ -83,10 +86,10 @@
 \newcommand{\vm}[1]{\textcolor{blue}{VM: #1}}
 
 
-\newcommand{\compresslist}{ % Define a command to reduce spacing within itemize/enumerate environments, this is used right after \begin{itemize} or \begin{enumerate}
-\setlength{\itemsep}{1pt}
-\setlength{\parskip}{0pt}
-\setlength{\parsep}{0pt}}
+%\newcommand{\compresslist}{ % Define a command to reduce spacing within itemize/enumerate environments, this is used right after \begin{itemize} or \begin{enumerate}
+%\setlength{\itemsep}{1pt}
+%\setlength{\parskip}{0pt}
+%\setlength{\parsep}{0pt}}
 
 \begin{document}
 % \renewcommand\thelinenumber{\color[rgb]{0.2,0.5,0.8}\normalfont\sffamily\scriptsize\arabic{linenumber}\color[rgb]{0,0,0}}
