--- a/Transfer_Learning/eccv_submission/experiments.tex
+++ b/Transfer_Learning/eccv_submission/experiments.tex
@@ -74,7 +74,7 @@ description of tasks, as shown in~\cref{fig:task-groups}.
 
 \begin{figure}[b!]
 	\centering
-	\includegraphics[width=0.5\textwidth]{../img/architecture/hierarchy}
+	\includegraphics[width=0.6\textwidth]{../img/architecture/hierarchy}
 	\caption{Hierarchy of Task Groups in the COG dataset.}
 	\label{fig:task-groups}
 \end{figure}
@@ -84,11 +84,11 @@ description of tasks, as shown in~\cref{fig:task-groups}.
 For groups at the lowest level, we chose the following task classes to be placed in those groups.
 Below, substitute each of \textit{Shape} and \textit{Color} for  \uX{} to obtain the task class.
 \begin{description}
-	\item[Basic:] \textit{Exist}\uX, \textit{Get}\uX{} and \textit{Exist};
-	\item[Obj-Attr:] \emph{SimpleCompare}\uX{} and \textit{AndSimpleCompare}\uX;
-	\item[Compare:] \textit{Compare}\uX,  \textit{AndCompare}\uX{} \& \textit{Exist}\uX\textit{Of};
-	\item[Spatial:] \textit{ExistSpace}, \textit{Exist}\uX\textit{Space}, and \textit{Get}\uX\textit{Space};
-	\item[Cognitive:] \textit{ExistLastColorSameShape}, \textit{ExistLastShapeSameColor} and \textit{ExistLastObjectSameObject}
+	\item[Basic:] \textit{Exist}\uX, \textit{Get}\uX{} and \textit{Exist} (5 task classes);
+	\item[Obj-Attr:] \emph{SimpleCompare}\uX{} and \textit{AndSimpleCompare}\uX\ (4 task classes);
+	\item[Compare:] \textit{Compare}\uX,  \textit{AndCompare}\uX{} \& \textit{Exist}\uX\textit{Of} (6 task classes);
+	\item[Spatial:] \textit{ExistSpace}, \textit{Exist}\uX\textit{Space}, and \textit{Get}\uX\textit{Space} (5 task classes);
+	\item[Cognitive:] \textit{ExistLastColorSameShape}, \textit{ExistLastShapeSameColor} and \textit{ExistLastObjectSameObject} (3 task classes)
 \end{description}
 
 
